--- a/app/.tmp/swiper_test/amp_main_test_noi_swiper.html
+++ b/app/.tmp/swiper_test/amp_main_test_noi_swiper.html
@@ -7,32 +7,31 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>悦商AMP</title>
-    <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../../favicon.ico" type="image/x-icon">
 
     <!-- 导入CSS -->
-    <link href="../static/dist/css/animate.css" rel="stylesheet">
-    <link href="../static/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../static/dist/css/swiper.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../static/dist/css/bootstrap-datetimepicker.min.css">
+    <link href="../../static/dist/css/animate.css" rel="stylesheet">
+    <link href="../../static/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../../static/dist/css/swiper.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="../../static/dist/css/bootstrap-datetimepicker.min.css">
 
-    <link href="../static/css/common/common.css" rel="stylesheet">
-    <link href="../static/css/common/static_table.css" rel="stylesheet">
-    <link href="../static/css/views/noi.css" rel="stylesheet">
+    <link href="../../static/css/common/common.css" rel="stylesheet">
+    <link href="../../static/css/common/static_table.css" rel="stylesheet">
+    <link href="../../static/css/views/noi.css" rel="stylesheet">
 
     <!-- 自有CSS -->
-    <link href="../static/css/main/amp_main.css" rel="stylesheet">
-    <link href="../components/toolbar/filter.css" rel="stylesheet">
+    <link href="../../static/css/main/amp_main.css" rel="stylesheet">
+    <link href="../../components/toolbar/filter.css" rel="stylesheet">
 
-    <script src="../static/dist/js/angular.min.js"></script>
-    <script src="../static/dist/js/jquery-1.11.3.min.js"></script>
-    <script src="../static/dist/js/bootstrap.min.js"></script>
-    <script src="../static/dist/js/bootstrap-datetimepicker.min.js"></script>
-    <script src="../static/dist/js/bootstrap-datetimepicker.zh-CN.js"></script>
-    <script src="../static/dist/js/swiper.jquery.js"></script>
-    <script src="../static/dist/js/stickUp.js"></script>
+    <script src="../../static/dist/js/angular.min.js"></script>
+    <script src="../../static/dist/js/jquery-1.11.3.min.js"></script>
+    <script src="../../static/dist/js/bootstrap.min.js"></script>
+    <script src="../../static/dist/js/bootstrap-datetimepicker.min.js"></script>
+    <script src="../../static/dist/js/bootstrap-datetimepicker.zh-CN.js"></script>
+    <script src="../../static/dist/js/swiper.jquery.js"></script>
 
-    <script src="../static/js/main/menu_list.js"></script>
-    <script src="../static/js/main/amp_main.js"></script>
+    <script src="../../static/js/main/menu_list.js"></script>
+    <script src="../../static/js/main/amp_main.js"></script>
     <script>
         $(window).load(function() {
             amp_main.placeholder_init();
@@ -71,6 +70,7 @@
             noi_head_swiper.params.control = noi_main_swiper;
             noi_main_swiper.params.control = noi_head_swiper;
 
+
             $(".ys-table-main").on("mouseenter","tr",function(e){
                 console.log("....")
                 var index=$(this).index();
@@ -100,21 +100,9 @@
                 }
             });
 
+
         });
-        jQuery(function($) {
-            $(document).ready(function(){
-                $('#noi-main-table-wrapper>.ys-table-fixed-top').stickUp({
-                    topMargin: '45px'
-                });
-            })
-        });
-
-
-
     </script>
-    <style>
-
-    </style>
 </head>
 <body>
 
@@ -138,7 +126,7 @@
                 <a href="#" class="menutoggle"><em class="ys-icon-spirit ys-icon-togglebar"></em></a>
             </h5>
             <div class="amp-side-toolbar active">
-                <script src="../components/toolbar/noi_filter.js"></script>
+                <script src="../../components/toolbar/noi_filter.js"></script>
                 <script>
                     $(document).ready(function(){
                        filters.monthSelector();
@@ -177,7 +165,6 @@
     </div>
     <div class="mainpanel">
         <div class="amp-content-panel noi-view" id="noi">
-
         <div class="amp-block">
             <div class="amp-table-wrapper" id="noi-summary">
                 <table class="table table-right-bordered amp-table" >
@@ -235,7 +222,6 @@
             </div><!--end ys-finacial-income-table-->
 
             <div class="amp-table-wrapper-swiper" id="noi-main-table-wrapper">
-
                 <div class="ys-table-fixed-top" style="padding-left:160px;">
                     <div class="ys-table-static ys-table-static-left" style="width:160px;">
                         <table class="table table-no-bordered amp-table table-hover table-header-fixed" style="width:100%;">
