data sim update

--- a/app/main/amp_main_test_datasim.html
+++ b/app/main/amp_main_test_datasim.html
@@ -216,7 +216,7 @@
                                 <div class="swiper-slide">
                                     <div class="ys-mainpanel-inner">
                                         <!--svg here-->
-                                        <svg version="1.1" id="ys-svg" xmlns="http://www.w3.org/2000/svg" width="1197px" height="500px" viewBox="0 0 1197 500" preserveAspectRetio="xMidYMid meet">
+                                        <svg version="1.1" id="ys-svg" xmlns="http://www.w3.org/2000/svg" width="100%" height="1180px" viewBox="0 0 500 1180" preserveAspectRetio="xMidYMid meet">
 
                                         </svg>
                                         <!--svg here-->
@@ -510,8 +510,9 @@
                                         </div>
                                     </div>
                                 </div><!--swiper slide-->
-                                <div class="swiper-scrollbar"></div>
+
                             </div><!--swiper wrapper-->
+                            <div class="swiper-scrollbar"></div>
                         </div><!--swiper container-->
                     </div>
                 </div>
