--- a/app/main/amp_main_test_datasim.html
+++ b/app/main/amp_main_test_datasim.html
@@ -35,7 +35,7 @@
     <script src="../static/dist/js/swiper.jquery.js"></script>
     <script src="../static/dist/js/jquery.pin.js"></script>
     <script src="../static/dist/js/echarts.common.min.js"></script>
-
+    <script src="../static/dist/js/iscroll.js"></script>
 
     <script src="../static/js/main/menu_list.js"></script>
     <script src="../static/js/main/amp_main.js"></script>
@@ -49,35 +49,10 @@
                 console.log(e);
                 console.log(id);
                 console.log(href);
+
+
             });
             amp_main.init();
-
-           /* setTimeout(function(){
-                amp_main.rightPanel_open();
-            },2000);
-            $(".ys-amp").on("right_panel_open",function(e){
-                alert("right_panel_open")
-            });*/
-
-            var noi_head_swiper = new Swiper('#noi-main-table-head', {
-                //scrollbar: '.swiper-scrollbar',
-                direction: 'horizontal',
-                slidesPerView: 'auto',
-                mousewheelControl: true,
-                freeMode: true,
-                scrollbarHide:true
-            });
-            var noi_main_swiper = new Swiper('#noi-main-table', {
-                scrollbar: '.swiper-scrollbar',
-                direction: 'horizontal',
-                slidesPerView: 'auto',
-                mousewheelControl: true,
-                freeMode: true,
-                scrollbarHide:false
-            });
-            noi_head_swiper.params.control = noi_main_swiper;
-            noi_main_swiper.params.control = noi_head_swiper;
-
 
 
         });
@@ -100,97 +75,102 @@
             <!--<h1>悦商<span>AMP</span>系统</h1>-->
             <em class="ys-icon ys-icon-amp-s"></em>
         </div><!-- logopanel -->
-        <div class="leftpanelinner">
-            <h5 class="sidebartitle">
-                <a href="#" class="menutoggle"><em class="ys-icon-spirit ys-icon-togglebar"></em></a>
-            </h5>
-            <div class="amp-side-toolbar active">
-                <div class="toolbar-block">
-                    <div class="toolbar-item item-month-filter" style="padding:0;">
-                        <label for="month-filter">月选择</label>
-                        <div class="input-group date ys-datepicker" id="monthpicker">
+
+            <div class="leftpanelinner" style="height:500px;">
+                <div>
+                    <h5 class="sidebartitle">
+                        <a href="#" class="menutoggle"><em class="ys-icon-spirit ys-icon-togglebar"></em></a>
+                    </h5>
+                    <div class="amp-side-toolbar active">
+                        <div class="toolbar-block">
+                            <div class="toolbar-item item-month-filter" style="padding:0;">
+                                <label for="month-filter">月选择</label>
+                                <div class="input-group date ys-datepicker" id="monthpicker">
             <span class="input-group-btn">
                 <button class="btn btn-default" type="button" id="ys-date-pre"><em class="glyphicon glyphicon-arrow-left"></em></button>
             </span>
-                            <input size="16" type="text" value="" data-provide="datepicker" id="month-filter" name="month-filter" ng-model="month-filter" readonly>
-                            <span class="input-group-btn">
+                                    <input size="16" type="text" value="" data-provide="datepicker" id="month-filter" name="month-filter" ng-model="month-filter" readonly>
+                                    <span class="input-group-btn">
                 <button class="btn btn-default" type="button" id="ys-date-next"><em class="glyphicon glyphicon-arrow-right"></em></button>
             </span>
-                            <!--   <span class="add-on"><i class="icon-th"></i></span>-->
-                        </div>
-                    </div><!--div toolbar-item-->
+                                    <!--   <span class="add-on"><i class="icon-th"></i></span>-->
+                                </div>
+                            </div><!--div toolbar-item-->
 
-                    <div class="toolbar-item item-datetime-filter" style="padding:0;">
-                        <label for="date-filter">日期</label>
-                        <div class="input-group date ys-datepicker" id="datepicker">
-                            <input size="16" type="text" value="" data-provide="datepicker" id="date-filter" name="date-filter" ng-model="date-filter" readonly>
-                            <!--   <span class="add-on"><i class="icon-th"></i></span>-->
-                        </div>
-                    </div><!--div toolbar-item-->
+                            <div class="toolbar-item item-datetime-filter" style="padding:0;">
+                                <label for="date-filter">日期</label>
+                                <div class="input-group date ys-datepicker" id="datepicker">
+                                    <input size="16" type="text" value="" data-provide="datepicker" id="date-filter" name="date-filter" ng-model="date-filter" readonly>
+                                    <!--   <span class="add-on"><i class="icon-th"></i></span>-->
+                                </div>
+                            </div><!--div toolbar-item-->
 
-                    <div class="toolbar-item item-daterange-filter" style="padding:0;">
-                        <label for="date-range-filter-start">日期</label>
-                        <div class="input-group date ys-datepicker" id="daterange">
-                            <input size="16" type="text" placeholder="开始" value="" data-provide="datepicker" id="date-range-filter-start" name="date-range-filter-start" ng-model="date-range-filter-start" readonly>
-                            <span class="input-group-addon input-sm">~</span>
-                            <input size="16" type="text" placeholder="结束" value="" data-provide="datepicker" id="date-range-filter-end" name="date-range-filter-end" ng-model="date-range-filter-end" readonly>
+                            <div class="toolbar-item item-daterange-filter" style="padding:0;">
+                                <label for="date-range-filter-start">日期</label>
+                                <div class="input-group date ys-datepicker" id="daterange">
+                                    <input size="16" type="text" placeholder="开始" value="" data-provide="datepicker" id="date-range-filter-start" name="date-range-filter-start" ng-model="date-range-filter-start" readonly>
+                                    <span class="input-group-addon input-sm">~</span>
+                                    <input size="16" type="text" placeholder="结束" value="" data-provide="datepicker" id="date-range-filter-end" name="date-range-filter-end" ng-model="date-range-filter-end" readonly>
 
-                        </div>
-                    </div><!--div toolbar-item-->
+                                </div>
+                            </div><!--div toolbar-item-->
 
-                    <div class="toolbar-item item-input-filter" style="padding:0;">
-                        <label for="input-shop-id">铺位号</label>
-                        <div class="input-group">
-                            <input type="text" placeholder="请输入" id="input-shop-id" name="input-shop-id">
-                        </div>
-                    </div><!--div toolbar-item-->
+                            <div class="toolbar-item item-input-filter" style="padding:0;">
+                                <label for="input-shop-id">铺位号</label>
+                                <div class="input-group">
+                                    <input type="text" placeholder="请输入" id="input-shop-id" name="input-shop-id">
+                                </div>
+                            </div><!--div toolbar-item-->
 
-                    <div class="toolbar-item item-input-filter" style="padding:0;">
-                        <label for="input-id">输入</label>
-                        <div class="input-group">
-                            <input type="text" placeholder="" id="input-id" name="input-id">
-                        </div>
-                    </div><!--div toolbar-item-->
+                            <div class="toolbar-item item-input-filter" style="padding:0;">
+                                <label for="input-id">输入</label>
+                                <div class="input-group">
+                                    <input type="text" placeholder="" id="input-id" name="input-id">
+                                </div>
+                            </div><!--div toolbar-item-->
 
-                    <div class="toolbar-item item-select-filter" style="padding:0;">
-                        <label for="search-id">选择</label>
-                        <input type="text" placeholder="" id="select-id" name="select-id" hidden value="">
-                        <div class="dropdown">
-                            <button class="btn dropdown-toggle" type="button" id="dropdownMenu" data-toggle="dropdown">
-                                <em>请选择</em><span class="ys-icon ys-icon-dropdown"></span>
-                            </button>
-                            <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu">
-                                <li role="presentation"><a role="menuitem" tabindex="-1" href="#">商业公司A</a></li>
-                                <li role="presentation"><a role="menuitem" tabindex="-1" href="#">商业公司B</a></li>
-                                <li role="presentation"><a role="menuitem" tabindex="-1" href="#">商业公司C</a></li>
-                                <li role="presentation"><a role="menuitem" tabindex="-1" href="#">商业公司D</a></li>
-                            </ul>
-                        </div>
-                    </div><!--div toolbar-item-->
+                            <div class="toolbar-item item-select-filter" style="padding:0;">
+                                <label for="search-id">选择</label>
+                                <input type="text" placeholder="" id="select-id" name="select-id" hidden value="">
+                                <div class="dropdown">
+                                    <button class="btn dropdown-toggle" type="button" id="dropdownMenu" data-toggle="dropdown">
+                                        <em>请选择</em><span class="ys-icon ys-icon-dropdown"></span>
+                                    </button>
+                                    <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu">
+                                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">商业公司A</a></li>
+                                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">商业公司B</a></li>
+                                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">商业公司C</a></li>
+                                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">商业公司D</a></li>
+                                    </ul>
+                                </div>
+                            </div><!--div toolbar-item-->
 
-                    <div class="toolbar-item item-search-filter" style="padding:0;">
-                        <label for="search-id">搜索</label>
-                        <div class="input-group">
-                            <input type="text" placeholder="" id="search-id" name="search-id">
-                            <span class="input-group-btn">
+                            <div class="toolbar-item item-search-filter" style="padding:0;">
+                                <label for="search-id">搜索</label>
+                                <div class="input-group">
+                                    <input type="text" placeholder="" id="search-id" name="search-id">
+                                    <span class="input-group-btn">
                 <button class="btn btn-default" type="button"><em class="ys-icon ys-icon-search"></em></button>
             </span>
+                                </div>
+                            </div><!--div toolbar-item-->
+
+                            <div class="toolbar-item item-btn-wrapper" style="padding:0;">
+                                <a href="javascript:void(0)" class="btn btn-default amp-btn" id="toolbar-submit">查询</a>
+                            </div><!--div toolbar-item-->
+
+                            <div class="toolbar-item item-btn-wrapper" style="padding:0;">
+                                <a href="javascript:void(0)" class="btn btn-default amp-btn" id="toolbar-create">录入</a>
+                            </div><!--div toolbar-item-->
                         </div>
-                    </div><!--div toolbar-item-->
+                    </div><!--amp-side-toolbar-->
+                    <ul class="nav nav-pills nav-stacked nav-bracket">
 
-                    <div class="toolbar-item item-btn-wrapper" style="padding:0;">
-                        <a href="javascript:void(0)" class="btn btn-default amp-btn" id="toolbar-submit">查询</a>
-                    </div><!--div toolbar-item-->
-
-                    <div class="toolbar-item item-btn-wrapper" style="padding:0;">
-                        <a href="javascript:void(0)" class="btn btn-default amp-btn" id="toolbar-create">录入</a>
-                    </div><!--div toolbar-item-->
+                    </ul>
                 </div>
-            </div><!--amp-side-toolbar-->
-            <ul class="nav nav-pills nav-stacked nav-bracket">
 
-            </ul>
-        </div><!-- leftpanelinner -->
+            </div><!-- leftpanelinner -->
+
     </div><!-- leftpanel -->
     <div class="headerpanel">
         <div class="headerbar">
@@ -210,8 +190,8 @@
             </div><!--amp-content-header-->
             <div class="ys-block">
                 <div class="clearfix">
-                    <div class="col-xs-6">
-                        <div class="swiper-container swiper-container-vertical swiper-container-free-mode" style="width:100%;" id="datatool-sim-floor-table">
+                    <div class="col-xs-6"  id="datatool-sim-floor-table">
+                        <div class="swiper-container swiper-container-vertical swiper-container-free-mode" style="width:100%;">
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
                                     <div class="ys-mainpanel-inner">
@@ -224,7 +204,7 @@
                                     </div>
                                 </div><!--swiper slide-->
                             </div><!--swiper wrapper-->
-                            <div class="swiper-scrollbar"></div>
+                          <!--  <div class="swiper-scrollbar"></div>-->
                         </div><!--swiper container-->
                         <div class="amp-svg-opt">
                             <h5>铺位</h5>
@@ -238,8 +218,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-xs-6">
-                        <div class="swiper-container swiper-container-vertical swiper-container-free-mode" style="width:100%;" id="datatool-sim-main-table">
+                    <div class="col-xs-6"  id="datatool-sim-main-table">
+                        <div class="swiper-container swiper-container-vertical swiper-container-free-mode" style="width:100%;">
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
                                     <div class="table-wrapper">
@@ -512,7 +492,7 @@
                                 </div><!--swiper slide-->
 
                             </div><!--swiper wrapper-->
-                            <div class="swiper-scrollbar"></div>
+                            <!--<div class="swiper-scrollbar"></div>-->
                         </div><!--swiper container-->
                     </div>
                 </div>
