--- a/app/main/amp_main_test_datasim.html
+++ b/app/main/amp_main_test_datasim.html
@@ -40,6 +40,7 @@
     <script src="../static/js/main/menu_list.js"></script>
     <script src="../static/js/main/amp_main.js"></script>
     <script src="../static/js/views/datatools/datasim.js"></script>
+    <script src="../static/js/views/datatools/inputs.js"></script>
     <script>
         $(window).load(function() {
             amp_main.placeholder_init();
@@ -462,7 +463,7 @@
                                                 <th><span>付款时间</span></th>
                                                 <td>
                                                     <div class="td-input-wrapper padding-r-15 select-input" >
-                                                        <input type="text" placeholder="" value="" hidden>
+                                                        <input type="text" placeholder="" value="年付" hidden>
                                                         <!--<span class="number-format"></span>%-->
                                                         <div class="dropdown">
                                                             <button class="btn dropdown-toggle" type="button" data-toggle="dropdown">
@@ -504,7 +505,8 @@
                 </div>
             </div>
         </div><!-- contentpanel -->
-        <script src="../../static/js/views/datatools/datasim.js"></script>
+       <!-- <script src="../../static/js/views/datatools/datasim.js"></script>-->
+
     </div><!-- mainpanel -->
 
     <!-- rightpanel -->
