--- a/app/main/amp_main_test_datasim.html
+++ b/app/main/amp_main_test_datasim.html
@@ -41,6 +41,7 @@
     <script src="../static/js/main/amp_main.js"></script>
     <script src="../static/js/views/datatools/datasim.js"></script>
     <script src="../static/js/views/datatools/inputs.js"></script>
+    <script src="../static/js/views/datatools/amp_table_input.js"></script>
     <script>
         $(window).load(function() {
             amp_main.placeholder_init();
