--- a/app/main/amp_main_solo_rpg_set.html
+++ b/app/main/amp_main_solo_rpg_set.html
@@ -1589,7 +1589,9 @@
 <script src="../static/dist/js/angular.min.js"></script>
 <script src="../static/dist/js/jquery-1.11.3.min.js"></script>
 <script src="../static/dist/js/bootstrap.min.js"></script>
-
+<script src="../static/dist/js/swiper.jquery.js"></script>
+<script src="../static/dist/js/jquery.pin.js"></script>
+<script src="../static/js/views/datatools/rpg_set.js"></script>
 <!--<script src="../static/js/main/amp_solo.js"></script>-->
 <script>
    /* $(window).load(function() {
