--- a/app/main/amp_main_ag_router.html
+++ b/app/main/amp_main_ag_router.html
@@ -25,8 +25,8 @@
 
     <!-- 自有CSS -->
     <link href="../static/css/main/amp_main.css" rel="stylesheet">
-    <link href="../components/toolbar/filter.css" rel="stylesheet">
     <link href="../static/css/views/noi.css" rel="stylesheet">
+    <link href="../components/toolbar/filter.css" rel="stylesheet">
     <link href="../static/css/views/datatools.css" rel="stylesheet">
 
 
@@ -34,7 +34,9 @@
     <script src="../static/dist/js/angular-ui-router.js"></script>
     <script src="../static/dist/js/jquery-1.11.3.min.js"></script>
     <script src="../static/dist/js/bootstrap.min.js"></script>
-    <script src="../static/dist/js/swiper.jquery.min.js"></script>
+    <script src="../static/dist/js/swiper.jquery.js"></script>
+    <script src="../static/dist/js/jquery.pin.js"></script>
+    <script src="../static/dist/js/echarts.common.min.js"></script>
     <script src="../static/js/main/menu_list.js"></script>
     <script src="../static/js/main/amp_main.js"></script>
     <script src="../static/js/main/amp_ag.js"></script>
