--- a/app/main/amp_main_ag.html
+++ b/app/main/amp_main_ag.html
@@ -35,6 +35,7 @@
     <div class="leftpanel">
         <div class="logopanel">
             <!--<h1>悦商<span>AMP</span>系统</h1>-->
+            <em class="ys-icon ys-icon-amp-s"></em>
         </div><!-- logopanel -->
         <div class="leftpanelinner">
             <h5 class="sidebartitle">
