--- a/app/main/amp_main_ag_router.html
+++ b/app/main/amp_main_ag_router.html
@@ -80,6 +80,7 @@
     <div class="leftpanel">
         <div class="logopanel">
             <!--<h1>悦商<span>AMP</span>系统</h1>-->
+            <a href="main.html" target="_self"><em class="ys-icon ys-icon-amp-s"></em></a>
         </div><!-- logopanel -->
         <div class="leftpanelinner">
             <h5 class="sidebartitle">
