--- a/app/main/create_project.html
+++ b/app/main/create_project.html
@@ -78,7 +78,7 @@
             </div>
 
             <div class="amp-opt-block">
-                <a href="#" class="btn amp-btn amp-btn-lg amp-btn-save" id="btn-amp-create">保存</a>
+                <a href="main.html" class="btn amp-btn amp-btn-lg amp-btn-save" id="btn-amp-create">保存</a>
             </div>
         </div><!--end content-panel-->
 
