--- a/app/main/main.html
+++ b/app/main/main.html
@@ -64,7 +64,7 @@
                     <th>
                         <h5>1号项目</h5>
                         <div class="t-opt">
-                            <span><a href="#">进入详情</a>|<a href="#">修改信息</a></span>
+                            <span><a href="amp_main_ag_router.html">进入详情</a>|<a href="create_project.html">修改信息</a></span>
                         </div>
                     </th>
                     <td>
@@ -106,7 +106,7 @@
                     是最有效的资产管理平台和数据增值系统<br></p>
             </div>
             <div class="amp-opt-block">
-                <a href="#" class="btn amp-btn amp-btn-lg">新建项目</a>
+                <a href="create_project.html" class="btn amp-btn amp-btn-lg">新建项目</a>
             </div>
         </div><!--end content-panel-->
 
