--- a/app/main/amp_main_solo.html
+++ b/app/main/amp_main_solo.html
@@ -36,6 +36,14 @@
 
 
     <script src="../static/js/main/amp_ag_solo.js"></script>
+    <script>
+        jQuery(document).ready(function(){
+            jQuery("#page-solo").on("click","a.amp-solo-close",function(e){
+                e.preventDefault();
+                window.close();
+            });
+        })
+    </script>
 </head>
 <body>
 
