--- a/app/main/test/amp_main.html
+++ b/app/main/test/amp_main.html
@@ -7,18 +7,15 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>悦商AMP</title>
-    <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../../favicon.ico" type="image/x-icon">
 
     <!-- 导入CSS -->
-    <link href="../static/dist/css/animate.css" rel="stylesheet">
-    <link href="../static/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../static/dist/css/swiper.min.css" rel="stylesheet">
-
-    <link href="../static/css/common/common.css" rel="stylesheet">
-    <link href="../static/css/common/static_table.css" rel="stylesheet">
+    <link href="../../static/dist/css/animate.css" rel="stylesheet">
+    <link href="../../static/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../../static/css/common/common.css" rel="stylesheet">
     <!-- 自有CSS -->
-    <link href="../static/css/main/amp_main.css" rel="stylesheet">
-    <link href="../static/css/views/noi.css" rel="stylesheet">
+    <link href="../../static/css/main/amp_main.css" rel="stylesheet">
+    <link href="../../static/css/main/amp_main.css" rel="stylesheet">
 </head>
 <body>
 
@@ -30,7 +27,7 @@
 <div id="preloader">
     <div id="status"><i class="fa fa-spinner fa-spin"></i></div>
 </div>
-<main class="page page-main ys-amp" id="page-main" role="main" ng-app="amp" >
+<main class="page page-main ys-amp" id="page-main" role="main">
 
     <div class="leftpanel">
         <div class="logopanel">
@@ -54,21 +51,17 @@
             <div class="head-main-menu">
                 <!-- Nav tabs -->
             </div>
-           <!-- <div class="header-right">
-                <span class="ys-figure ys-useer-figure"></span>
-            </div> &lt;!&ndash;h-->eader-right-->
+
         </div><!-- headerbar -->
     </div>
     <div class="mainpanel">
-        <div class="contentpanel">
+        <div class="amp-content-panel">
             <div class="amp-content-header clearfix">
                 <!-- Breadcrumb / Summary info-->
 
             </div><!--amp-content-header-->
             <div class="ys-block">
-                <div ng-view>
 
-                </div>
             </div><!--ys-block-->
         </div><!-- contentpanel -->
     </div><!-- mainpanel -->
@@ -87,44 +80,34 @@
     <div class="backdrop"></div>
     <!--end backdrop loading-->
 </main>
-<script src="../static/dist/js/angular.min.js"></script>
-<script src="../static/dist/js/angular-route.js"></script>
-<script src="../static/dist/js/angular-resource.js"></script>
-<script src="../static/dist/js/jquery-1.11.3.min.js"></script>
-<script src="../static/dist/js/bootstrap.min.js"></script>
-<script src="../static/dist/js/swiper.jquery.min.js"></script>
+<script src="../../static/dist/js/angular.min.js"></script>
+<script src="../../static/dist/js/jquery-1.11.3.min.js"></script>
+<script src="../../static/dist/js/bootstrap.min.js"></script>
 
-
-<script src="../static/js/main/menu_list.js"></script>
-<script src="../static/js/main/amp_main.js"></script>
-<script src="../static/js/main/amp_ag.js"></script>
-<script src="../static/js/main/controllers.js"></script>
-<script src="../static/js/main/filters.js"></script>
-<script src="../static/js/main/services.js"></script>
-
+<script src="../../static/js/main/menu_list.js"></script>
+<script src="../../static/js/main/amp_main.js"></script>
 <script>
     $(window).load(function() {
         amp_main.placeholder_init();
     });
-    var i=0;
     $(document).ready(function(){
         $(".ys-amp").on("relocate",function(e,id,href){
             console.log(e);
             console.log(id);
             console.log(href);
-            i+=1;
-            if(i>=2){
-                window.location.href=href;
-            }
-
         });
         amp_main.init();
+        setTimeout(function(){
+            $("body").addClass("open open-panel");
+        },3000);
 
+
+
+        $(".rightpanel").on("click",".closebtn",function(e){
+            e.preventDefault();
+            $("body").removeClass("open open-panel");
+        })
     });
-</script>
-
-<script>
-
 </script>
 </body>
 </html>
