--- a/app/main/test/amp_main_solo_rpg_set.html
+++ b/app/main/test/amp_main_solo_rpg_set.html
@@ -7,23 +7,23 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>悦商AMP</title>
-    <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../../favicon.ico" type="image/x-icon">
 
     <!-- 导入CSS -->
-    <link href="../static/dist/css/animate.css" rel="stylesheet">
-    <link href="../static/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../static/dist/css/swiper.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../static/dist/css/bootstrap-datetimepicker.min.css">
+    <link href="../../static/dist/css/animate.css" rel="stylesheet">
+    <link href="../../static/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../../static/dist/css/swiper.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="../../static/dist/css/bootstrap-datetimepicker.min.css">
 
-    <link href="../static/css/common/common.css" rel="stylesheet">
-    <link href="../static/css/common/static_table.css" rel="stylesheet">
+    <link href="../../static/css/common/common.css" rel="stylesheet">
+    <link href="../../static/css/common/static_table.css" rel="stylesheet">
 
 
 
     <!-- 自有CSS -->
-    <link href="../static/css/main/amp_main.css" rel="stylesheet">
-    <link href="../components/toolbar/filter.css" rel="stylesheet">
-    <link href="../static/css/views/datatools.css" rel="stylesheet">
+    <link href="../../static/css/main/amp_main.css" rel="stylesheet">
+    <link href="../../components/toolbar/filter.css" rel="stylesheet">
+    <link href="../../static/css/views/datatools.css" rel="stylesheet">
 
 </head>
 <body>
@@ -1586,12 +1586,12 @@
     <div class="backdrop"></div>
     <!--end backdrop loading-->
 </main>
-<script src="../static/dist/js/angular.min.js"></script>
-<script src="../static/dist/js/jquery-1.11.3.min.js"></script>
-<script src="../static/dist/js/bootstrap.min.js"></script>
-<script src="../static/dist/js/swiper.jquery.js"></script>
-<script src="../static/dist/js/jquery.pin.js"></script>
-<script src="../static/js/views/datatools/rpg_set.js"></script>
+<script src="../../static/dist/js/angular.min.js"></script>
+<script src="../../static/dist/js/jquery-1.11.3.min.js"></script>
+<script src="../../static/dist/js/bootstrap.min.js"></script>
+<script src="../../static/dist/js/swiper.jquery.js"></script>
+<script src="../../static/dist/js/jquery.pin.js"></script>
+<script src="../../static/js/views/datatools/rpg_set.js"></script>
 <!--<script src="../static/js/main/amp_solo.js"></script>-->
 <script>
    /* $(window).load(function() {
