--- a/app/main/amp_main_ag_router.html
+++ b/app/main/amp_main_ag_router.html
@@ -53,7 +53,7 @@
         });
         var i=0;
         $(document).ready(function(){
-            $(".ys-amp").on("relocate",function(e,id,href){
+           /* $(".ys-amp").on("relocate",function(e,id,href){
                 console.log(e);
                 console.log(id);
                 console.log(href);
@@ -61,7 +61,7 @@
                 if(i>=2){
                     window.location.href=href;
                 }
-            });
+            });*/
             amp_main.init();
 
         });
@@ -126,7 +126,7 @@
 </main>
 
 <script>
-
+ console.log("...");
 </script>
 </body>
 </html>
