--- a/app/main/amp_main_solo.html
+++ b/app/main/amp_main_solo.html
@@ -28,6 +28,7 @@
     <script src="../static/dist/js/angular-ui-router.js"></script>
     <script src="../static/dist/js/bootstrap.min.js"></script>
     <script src="../static/dist/js/swiper.jquery.min.js"></script>
+    <script src="../static/dist/js/jquery.pin.js"></script>
     <script src="../static/js/main/controllers.js"></script>
     <script src="../static/js/main/filters.js"></script>
     <script src="../static/js/main/services.js"></script>
