--- a/app/main/main.html
+++ b/app/main/main.html
@@ -86,13 +86,13 @@
                     </td>
                     <td class="amp-pm-td">
                         <div class="amp-pm">
-                            <em class="ys-figure"></em>
+                            <em class="ys-figure" style="background-image:url(../static/images/male.png);"></em>
                             <div class="amp-pm-info">
                                 <h5>王涛</h5>
                                 <span class="t-sub">营运经理</span>
                                 <span class="t-sub">团队人数<i>12</i></span>
                                 <div class="t-opt">
-                                    <span><a href="#">联系他</a>|<a href="#">查看简历</a></span>
+                                    <span class="not-allowed"><a href="#">联系他</a>|<a href="#">查看简历</a></span>
                                 </div>
                             </div>
                         </div>
@@ -100,11 +100,11 @@
                 </tr><!--tr-->
                 </tbody>
             </table>
-            <div class="ys-block amp-create-project">
+           <!-- <div class="ys-block amp-create-project">
                 <h3>还没有在AMP创建任何项目</h3>
                 <p>AMP为您提供专业的资产估值服务<br>
                     是最有效的资产管理平台和数据增值系统<br></p>
-            </div>
+            </div>-->
             <div class="amp-opt-block">
                 <a href="create_project.html" class="btn amp-btn amp-btn-lg">新建项目</a>
             </div>
