--- a/app/main/amp_main_ag_router.html
+++ b/app/main/amp_main_ag_router.html
@@ -88,7 +88,7 @@
         <div class="leftpanelinner">
             <div>
                 <h5 class="sidebartitle">
-                    <a href="#" class="menutoggle"><em class="ys-icon-spirit ys-icon-togglebar"></em></a>
+                    <a href="javascript:void(0)" class="menutoggle"><em class="ys-icon-spirit ys-icon-togglebar"></em></a>
                 </h5>
                 <div class="amp-side-toolbar active">
                     <ui-view name="toolbar"></ui-view>
